apps/base/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      # # --- START: ADDITIONS FOR DHCP ---
      # hostNetwork: true
      # dnsPolicy: ClusterFirstWithHostNet
      # # --- END: ADDITIONS FOR DHCP ---
      containers:
        - name: pihole
          image: pihole/pihole:latest
      #     # --- START: ADDITION FOR DHCP PERMISSIONS ---
      #     securityContext:
      #       capabilities:
      #         add:
      #           - NET_ADMIN
      #     # --- END: ADDITION FOR DHCP PERMISSIONS ---
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: pihole-storage
              mountPath: /etc/pihole
            - name: pihole-tls
              mountPath: /etc/pihole/tls.pem
              subPath: tls.pem
      volumes:
        - name: pihole-storage
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: pihole-tls
          secret:
            secretName: pihole-tls
